<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Be Polite</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">735407009913998</string>
    <string name="title_activity_findu">findu</string>
    <string name="hint_nombre">Pon un nombre a tu Mascota!</string>
    <string name="pregunta_default">¿Te gustaria ser una mejor persona ?</string>
    <string name="si">Sí !</string>
    <string name="no">No !</string>
    <string name="despues">Despues !</string>
    <string name="title_activity_activity_inicio">Activity_inicio</string>
    <string name="title_activity_inico_mascota">InicoMascota</string>
    <string name="nombre_usuario">Nombre del usuario</string>
    <string name="label_inicio">Debes dar un nombre a tu macota para iniciar.</string>
    <string name="comenzar">Comenzar!</string>
    <string name="visita_amigos">Conoce las mascotas de tus amigos</string>



</resources>
