<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_ingresa_nombre"
                android:hint="@string/hint_nombre"
                android:gravity="center" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/mun7"
                android:scaleType="fitXY"
                android:layout_margin="10dp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.70">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pregunta_default"
                    android:id="@+id/tv_defualt"
                    android:layout_gravity="center"
                    android:textSize="25dp"
                    android:gravity="center" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:layout_margin="10dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/si"
                        android:id="@+id/rb_si"
                        android:layout_weight="1"
                        android:checked="true"
                        android:gravity="center" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no"
                        android:id="@+id/rb_no"
                        android:layout_weight="1"
                        android:checked="false"
                        android:gravity="center" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/despues"
                        android:id="@+id/rb_despues"
                        android:layout_weight="1"
                        android:checked="false"
                        android:gravity="center" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>
